fix spacing issue on bigger screens, adjust font sizes

--- a/app/(notLoggedIn)/page.module.css
+++ b/app/(notLoggedIn)/page.module.css
@@ -36,17 +36,19 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     width: 90%;
+    max-width: 1350px;
     column-gap: 50px;
 }
 
 .contenttwo {
-    margin: 80px auto 40px auto;
+    margin: 80px auto 70px auto;
     grid-row: 4 / 5;
     grid-column: 1 / 3;
     color: var(--text);
     display: grid;
     grid-template-columns: 1fr 1fr;
     width: 90%;
+    max-width: 1350px;
     column-gap: 50px;
 }
 
@@ -87,8 +89,13 @@
     width: 100%;
 }
 
+.aspectratio {
+    max-width: 800px;
+    max-height: 450px;
+}
+
 .h3 {
-    font-size: 32px;
+    font-size: 26px;
     text-align: left;
     margin: auto;
     margin-top: 0px;
@@ -106,8 +113,9 @@
 
 .p {
     font-size: 18px;
-    margin-right: 50px;
     margin: auto;
+    margin-right: 50px;
+    margin-top: 10px;
 }
 
 .howitworks {
